Fix alignment of tab icons

--- a/assets/sass/_fields.scss
+++ b/assets/sass/_fields.scss
@@ -357,9 +357,10 @@
 		width: 36px;
 		height: 36px;
 		padding: 4px;
-		font-size: 24px;
 		box-sizing: border-box;
 		color: currentColor;
+		display: grid;
+		place-items: center;
 	}
 
 	&-selected {
@@ -370,7 +371,6 @@
 			height: 36px;
 			padding: 4px;
 			box-sizing: border-box;
-			font-size: 24px;
 			border: 1px solid #8c8f94;
 			border-radius: 4px;
 			margin-right: 10px;
